1. fixed: green player ignores direction 2. fixed: Blue not seeking mystery cells when CCW 3. fixed: hardcoded values and used GameConfig